fixed App overflow issues

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -10,10 +10,10 @@ html, body {
   margin: 0px;
 
   /* Use all the real estate */
-  height: 100%;
+  min-height: 100%;
 }
 #root, .App {
-  height: 100%;
+  min-height: 100%;
 }
 
 /* Global spacing */
